--- a/server/package.json
+++ b/server/package.json
@@ -25,5 +25,7 @@
     "sequelize-cli": "^6.4.1",
     "sharp": "^0.30.3",
     "uuid": "^8.3.2"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
